SERVER-48390 Exhaust pending calls when $group with $accumulator runs out of memory